classDiagram
    class PaymentTerms {
        +UUID id
        +String name
        +Number days
        +String description
        +DateTime created_at
        +DateTime updated_at
    }
    class Quote {
        +UUID id
        +String title
        +String reference
        +String currency
        +String language
        +String status
        +Date issue_date
        +Date valid_until
        +String payment_terms_text
        +Decimal subtotal
        +Decimal tax_total
        +Decimal discount_total
        +Decimal total
        +String note
        +String pdf_file
        +JSON metadata
        +DateTime created_at
        +DateTime updated_at
        +DateTime sent_at
        +DateTime accepted_at
    }
    class QuoteLineItem {
        +UUID id
        +String description
        +Decimal qty
        +Decimal unit_price
        +Decimal tax_rate
        +Decimal discount
        +Decimal line_total
        +Number order
        +JSON metadata
        +DateTime created_at
        +DateTime updated_at
    }
    class QuoteHistory {
        +UUID id
        +JSON payload_snapshot
        +String action
        +DateTime timestamp
    }
    PaymentTerms "*" --> "1" User : owner
    Quote "*" --> "1" User : owner
    Quote "*" --> "1" Client : client
    Quote "*" --> "1" PaymentTerms : payment_terms
    QuoteLineItem "*" --> "1" Quote : quote
    QuoteHistory "*" --> "1" Quote : quote
    QuoteHistory "*" --> "1" User : actor